--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -16,13 +16,15 @@
                         class="panel layout horizontal flex-2"
                         graph-data="{{graphData}}"
                         renderer-data="{{rendererData}}"
-                        models-data="{{modelsData}}">
+                        models-data="{{modelsData}}"
+                        on-error="_handleError">
             </cg-element>
             <cg-inspector id="inspector"
                           class="panel layout horizontal flex"
                           models="{{modelsData}}"
                           on-save="_graphSaved"
-                          on-compile="_graphCompiled"></cg-inspector>
+                          on-compile="_graphCompiled"
+                          on-error="_handleError"></cg-inspector>
         </div>
     </template>
     <script src="dude-models.js"></script>
@@ -58,6 +60,9 @@
             },
             _graphCompiled: function (e) {
                 console.log(e.detail);
+            },
+            _handleError: function (e) {
+                console.log("error: ", e.detail.message);
             }
         });
     </script>
