Fix design of assignation.

--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -235,7 +235,7 @@ methods and properties.
                 ]}});
                 this._customVariables = {group: {name: "custom variables", icon: "fa fa-folder", items: []}};
                 this._blocksTree.unshift(this._customVariables);
-                this._blocksTree.unshift({item: {name: "assignation", icon: "fa fa-square", data: {
+                this._blocksTree.unshift({item: {name: "Assignation", icon: "fa fa-plus-square", data: {
                     "cgType": "Assignation"
                 }}});
                 this.$.blocks.loadItems(this._blocksTree);
