Added CgInspector constructor for Javascript.

--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -190,7 +190,7 @@ methods and properties.
         </div>
     </template>
     <script>
-        Polymer({
+        var CgInspector = Polymer({
             is: "cg-inspector",
             properties: {
                 models: {
