--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -240,6 +240,9 @@ methods and properties.
                 }}});
                 this.$.blocks.loadItems(this._blocksTree);
             },
+            getHierarchy: function () {
+                return this.$.blocks;
+            },
             bindBuilder: function (builder) {
                 this._builder = builder;
             },
