Removed headers, added MIT license

--- a/cg-element.html
+++ b/cg-element.html
@@ -1,14 +1,11 @@
-<!--
-Copyright (c) 2015 DudeTeam. All rights reserved.
--->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
 <link rel="import" href="../paper-toast/paper-toast.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 
 <!--
-`cg-element` is a Polymer element which creates a codegraph svg renderer which can be manipulated using several
-methods and properties.
+`cg-element` is a Polymer element which creates a codegraph svg renderer which can be manipulated using several methods and properties.
+
 @group Codegraph
 @element cg-element
 @demo demo/index.html
