--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -8,9 +8,8 @@
 <link rel="import" href="../magnet-state/magnet-state.html">
 
 <!--
-`cg-inspector` is a Polymer element which creates the inspector for codegraph. In other words, it creates the sidebar
-that will be used 
-methods and properties.
+`cg-inspector` is a Polymer element which creates the inspector for codegraph. In other words, it creates the sidebar that will be used for setting methods and properties.
+
 @group Codegraph
 @element cg-inspector
 @demo demo/index.html
