--- a/themes/dude.html
+++ b/themes/dude.html
@@ -1,4 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
 <link href="base.html" rel="import">
 <style is="custom-style">
 
@@ -6,13 +6,13 @@
      * Config
      */
     :root {
-        --cg-primary-color: #5990c7;
+        --cg-primary-color: #ffe488;
         --cg-stream-color: #888888;
         --cg-background-color: #333333;
         --cg-title-color: hsla(0, 0%, 90%, 1);
         --cg-text-color: hsla(0, 0%, 60%, 1);
         --cg-error-color: var(--paper-red-700);
-        --cg-display-font: "Nunito", arial, sans-serif;
+        --cg-display-font: "Josefin Sans", arial, sans-serif;
         --paper-input-container-focus-color: var(--cg-primary-color);
         --paper-input-container-input-color: var(--cg-text-color);
         --paper-input-container-input: {
@@ -26,6 +26,12 @@
             text-transform: none;
             background: var(--cg-primary-color);
             color: var(--cg-background-color);
+            border-radius: 0;
+        };
+        --paper-dialog: {
+            background: var(--cg-background-color);
+            color: var(--cg-text-color);
+            font-family: var(--cg-display-font);
         };
     }
 
