--- a/demo/index.html
+++ b/demo/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codegraph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <link rel="import" href="../themes/dude.html">
     <link rel="import" href="demo-wrapper.html">
 </head>
 <body class="fullbleed">
