--- a/themes/dude.html
+++ b/themes/dude.html
@@ -10,7 +10,8 @@
         --cg-stream-color: #888888;
         --cg-background-color: #333333;
         --cg-title-color: hsla(0, 0%, 90%, 1);
-        --cg-text-color: hsla(0, 0%, 60%, 1);
+        --cg-text-color: hsla(0, 0%, 70%, 1);
+        --cg-text-secondary-color: hsla(0, 0%, 50%, 1);
         --cg-error-color: var(--paper-red-700);
         --cg-display-font: "Josefin Sans", arial, sans-serif;
         --paper-input-container-focus-color: var(--default-primary-color);
