--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -46,6 +46,14 @@
             font-weight: bold;
             color: var(--cg-title-color);
             padding-bottom: 10px;
+            border-bottom: 2px solid #222222;
+            margin-bottom: 10px;
+            cursor: pointer;
+        }
+        .title i {
+            color: var(--cg-text-color);
+            font-size: .8em;
+            padding-right: 5px;
         }
         .subtitle {
             color: var(--cg-title-color);
@@ -56,19 +64,15 @@
             padding: 10px;
         }
 
-        .box:not(:last-child) {
-            /*margin-bottom: 10px;*/
-            /*border-bottom: 2px solid #222222;*/
-        }
-
         .row {
-            padding: 5px;
+            padding-bottom: 5px;
         }
 
         label {
             display: block;
             font-size: .8em;
             padding-top: 5px;
+            color: var(--cg-text-secondary-color);
         }
 
         input, paper-dropdown-menu {
@@ -77,7 +81,7 @@
         }
 
         input[type="text"] {
-            padding: 5px;
+            padding: 5px 0;
             outline: none;
             border: none;
             background: transparent;
@@ -114,7 +118,10 @@
         </paper-dialog>
         <div class="layout vertical flex">
             <div class="box">
-                <div class="title">Tools</div>
+                <div class="title">
+                    <i class="fa fa-chevron-down"></i>
+                    Tools
+                </div>
                 <paper-button class="primary" on-click="_compile">Compile</paper-button>
                 <paper-button class="primary" on-click="_addGroup">Add group</paper-button>
                 <paper-button class="primary" on-click="_removeSelection">Remove selection</paper-button>
@@ -124,12 +131,18 @@
             <magnet-state id="state" class="layout vertical flex" root-state="root" current-state="{{_currentState}}">
                 <div class="layout vertical flex" data-state="root">
                     <div class="box">
-                        <div class="title">Add block</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Add block
+                        </div>
                         <magnet-hierarchy id="blocks" on-submit="_createBlock"></magnet-hierarchy>
                     </div>
                     <!-- .box -->
                     <div class="box">
-                        <div class="title">Create variable</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Create variable
+                        </div>
                         <div class="row">
                             <label>type</label>
                             <paper-dropdown-menu label="Choose..." selected-item-label="{{_varType}}" no-label-float>
@@ -142,8 +155,7 @@
                         </div>
                         <div class="row">
                             <label>name</label>
-                            <input is="iron-input" bind-value="{{_varName}}" placeholder="my_custom_variable"
-                                   type="text">
+                            <input is="iron-input" bind-value="{{_varName}}" type="text">
                         </div>
                         <div class="row">
                             <label>value</label>
@@ -156,7 +168,9 @@
                 <!-- root -->
                 <div data-state="editGroup">
                     <div class="box">
-                        <div class="title">Edit group</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Edit group</div>
                         <div class="row">
                             <label>description</label>
                             <input is="iron-input" bind-value="{{_groupDescription}}" placeholder="Group description..."
@@ -170,11 +184,12 @@
                 <!-- Edit group -->
                 <div data-state="editBlock">
                     <div class="box">
-                        <div class="title">Edit block</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Edit block</div>
                         <div class="row">
                             <label>name</label>
-                            <input is="iron-input" bind-value="{{_blockName}}" placeholder="my_custom_variable"
-                                   type="text">
+                            <input is="iron-input" bind-value="{{_blockName}}" type="text">
                         </div>
                         <div class="subtitle" hidden$="{{_blockNoInput}}">Inputs</div>
                         <div class="row">
@@ -190,7 +205,9 @@
                 <!-- Edit block -->
                 <div data-state="editValue">
                     <div class="box">
-                        <div class="title">Edit value</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Edit value</div>
                         <div class="row">
                             <label>value</label>
                             <input is="iron-input" bind-value="{{_value}}" type="text">
@@ -202,11 +219,12 @@
                 <!-- Edit value -->
                 <div data-state="editVariable">
                     <div class="box">
-                        <div class="title">Edit variable</div>
+                        <div class="title">
+                            <i class="fa fa-chevron-down"></i>
+                            Edit variable</div>
                         <div class="row">
                             <label>name</label>
-                            <input is="iron-input" bind-value="{{_varName}}" placeholder="my_custom_variable"
-                                   type="text">
+                            <input is="iron-input" bind-value="{{_varName}}" type="text">
                         </div>
                         <div class="row">
                             <label>value</label>
