--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codegraph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <!-- firefox didn't for without adding this links in the index -->
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="../bower_components/components-font-awesome/css/font-awesome.css" rel="stylesheet">
     <link rel="import" href="../themes/dude.html">
     <link rel="import" href="demo-wrapper.html">
 </head>
