--- a/cg-element.html
+++ b/cg-element.html
@@ -58,6 +58,19 @@
         ready: function () {
             this.graph = new cg.Graph(this.graphData, this.modelsData);
             this.renderer = new cg.Renderer(this.$.svg, this.graph, this.rendererData);
+            this.renderer.addBlockType(cg.Block);
+            this.renderer.addBlockType(cg.Function);
+            this.renderer.addBlockType(cg.Instruction);
+            this.renderer.addBlockType(cg.Delegate);
+            this.renderer.addBlockType(cg.Assignation);
+            this.renderer.addBlockType(cg.Variable);
+            this.renderer.addBlockType(cg.Value);
+            this.renderer.addBlockType(cg.Each);
+            this.renderer.addBlockType(cg.Range);
+            this.renderer.addBlockType(cg.Condition);
+            this.renderer.addBlockType(cg.Getter);
+            this.renderer.addBlockType(cg.Operator);
+
             this.graph.loader.load();
             this.renderer.initialize();
 
