--- a/cg-element.html
+++ b/cg-element.html
@@ -22,6 +22,7 @@
         </div>
     </template>
 </dom-module>
+<script src="../lodash/lodash.js"></script>
 <script src="../d3/d3.js"></script>
 <script src="codegraph.js"></script>
 <script>
