--- a/cg-inspector.html
+++ b/cg-inspector.html
@@ -1,3 +1,6 @@
+<!--
+Copyright (c) 2015 DudeTeam. All rights reserved.
+-->
 <link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../paper-menu/paper-menu.html">
@@ -6,11 +9,10 @@
 <link rel="import" href="../iron-input/iron-input.html">
 <link rel="import" href="../magnet-hierarchy/magnet-hierarchy.html">
 <link rel="import" href="../magnet-state/magnet-state.html">
-
 <!--
-`cg-inspector` is a Polymer element which creates the inspector for codegraph. In other words, it creates the sidebar that will be used for setting methods and properties.
+`cg-inspector` is a Polymer element which creates the inspector for dude-graph. In other words, it creates the sidebar that will be used for setting methods and properties.
 
-@group Codegraph
+@group dude-graph
 @element cg-inspector
 @demo demo/index.html
 -->
