--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../cg-element.html">
+<link rel="import" href="../dude-graph.html">
 <link rel="import" href="../cg-inspector.html">
 <dom-module id="demo-wrapper">
     <style>
@@ -11,13 +11,13 @@
     </style>
     <template>
         <div id="wrapper" class="layout horizontal fit">
-            <cg-element id="element"
+            <dude-graph id="element"
                         class="panel layout horizontal flex-2"
                         graph-data="{{graphData}}"
                         renderer-data="{{rendererData}}"
                         models-data="{{modelsData}}"
                         on-error="_handleError">
-            </cg-element>
+            </dude-graph>
             <cg-inspector id="inspector"
                           class="panel layout horizontal flex"
                           models="{{modelsData}}"
