--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>codegraph</title>
+    <title>dude-graph</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<iron-component-page src="cg-element.html"></iron-component-page>
+<iron-component-page src="dude-graph.html"></iron-component-page>
 
 </body>
 </html>
