--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -10,13 +10,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../magnet-hierarchy/magnet-hierarchy.html">
 <link rel="import" href="../magnet-state/magnet-state.html">
 <!--
-`cg-inspector` is a Polymer element which creates the inspector for dude-graph. In other words, it creates the sidebar that will be used for setting methods and properties.
+`dude-graph-inspector` is a Polymer element which creates the inspector for dude-graph. In other words, it creates the sidebar that will be used for setting methods and properties.
 
 @group dude-graph
-@element cg-inspector
+@element dude-graph-inspector
 @demo demo/index.html
 -->
-<dom-module id="cg-inspector">
+<dom-module id="dude-graph-inspector">
     <style>
         :root { /* WTF?? Why do I need that?! */
             --default-primary-color: #ffe488;
@@ -242,7 +242,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     </template>
     <script>
         var CgInspector = Polymer({
-            is: "cg-inspector",
+
+            is: "dude-graph-inspector",
+
             properties: {
                 models: {
                     type: Object,
