Replaced cg namespace by dudeGraph.

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,7 +56,7 @@
 
         /**
          * This block represents a simple function that takes some inputs and returns one or zero output.
-         * @extends {cg.Block}
+         * @extends {dudeGraph.Block}
          * @param {String} name The name of this block
          * @constructor
          */
